fix on mobile

--- a/components/Button/styles.module.sass
+++ b/components/Button/styles.module.sass
@@ -49,6 +49,7 @@ $container-width: 320px
     height: $spacing-xxhuge
     width: 100%
     object-fit: contain
+    object-position: center
 
   .resultIcon
     height: $spacing-xlarge
